--- a/src/components/Contact.module.css
+++ b/src/components/Contact.module.css
@@ -1,4 +1,4 @@
-.info {
+/* .info {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -12,4 +12,40 @@ p {
     gap: 5px;
     justify-content: center;
     align-items: center;
+} */
+
+.contact {
+    display: flex;
+    flex-direction: row;
+    width: 256px;
+    justify-content: space-between;
+    align-items: center;
+    padding: 8px;
+    border: 1px solid #0a0a0a;
+    border-radius: 8px;
+    transition: box-shadow 0.25s ease-in-out;
+}
+
+.contact:hover {
+    box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.5);
+}
+
+.contactInfo {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    width: 100%;
+}
+
+.contactName {
+    text-align: left;
+}
+
+.contactTel {
+    text-align: left;
+    transition: color 0.25s ease-in-out;
+}
+
+.contactTel:hover {
+    color: #0a3dca;
 }
