--- a/src/components/ContactForm.module.css
+++ b/src/components/ContactForm.module.css
@@ -1,4 +1,4 @@
-.form {
+/* .form {
     display: flex;
     flex-direction: column;
     border: 1px solid gray;
@@ -16,4 +16,46 @@
 
 .error {
     color: red;
+} */
+
+.form {
+    width: 450px;
+    display: flex;
+    flex-direction: column;
+    margin: 0 auto 32px;
+    border: 1px solid #0a0a0a;
+    border-radius: 8px;
+    padding: 16px;
+}
+
+.fieldWrapper {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    height: 86px;
+}
+
+.label {
+    text-align: left;
+    font-weight: 500;
+    margin-left: 16px;
+    margin-bottom: 3px;
+}
+
+.field {
+    width: 100%;
+}
+
+.errorMsg {
+    font-size: 16px;
+    font-weight: 600;
+    color: #ff0000;
+    text-align: left;
+    margin-left: 16px;
+}
+
+.submitBtn {
+    width: 180px;
+    margin: 0 auto;
+    border: 1px solid #0a0a0a;
 }
