--- a/src/index.css
+++ b/src/index.css
@@ -67,6 +67,7 @@ button {
   background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  border: 1px solid #0a0a0a;
 }
 
 button:hover {
